user prof update
complete user prof update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,13 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
     "mongodb": "^6.5.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
