--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.51.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "react-webcam": "^7.2.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
