--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@botpress/webchat": "^1.3.13",
+    "@botpress/webchat-generator": "^0.1.4",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -23,12 +25,14 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "botpress": "^10.51.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
     "mongodb": "^6.5.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
+    "react-chatbotify": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-query": "^3.39.3",
